odoo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo-deployment
  namespace: odoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo-deployment
template:
  metadata:
    labels:
      app: odoo-deployment
  spec:
    containers:
    - name: odoo-app
      # check image path 
      image: docker.io/bitnami/odoo:16
      # port? in doc ODOO_PORT_NUMBER 8069  
      ports:
      - containerPort: 80
      volumeMounts:
      - name: odoo-data
        mountPath: /bitnami/odoo
    volumes:
    - name: odoo-data
      emptyDir: {}
