postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-svc
  namespace: odoo
spec:
  selector:
    app: postgresql
  ports:
  - protocol: TCP
    port: 5432
    containerPort: 5432
